updated customer journey

--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -373,19 +373,50 @@
 											<div class="col-lg-12">
 												<h3>CUSTOMER JOURNEY</h3>
 												<div style=" border: 1.5px solid #C81E10; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
+
+												<p style="margin-bottom: 30px;"> Our goal is to reimagine Chipotle's mobile ordering experience, making it more efficient, enjoyable, and user-friendly. Our team is specifically focused on enhancing the group ordering process and incentivizing customers to use the app regularly. Through our research, we identified discrepancies in group ordering, which is prevalent in corporate and party settings such as social gatherings, family events, or professional settings. Improving order accuracy and streamlining the app's usability are key priorities to enhance the overall customer experience.
+												
+												</p>
+				
+												<div class="row">
+													<!-- customer values and frustrations -->
+													<div class="col-lg-5">
+														<p style="margin-bottom: 10px; display: inline-block"> Customer Values:
+															<ol style="font-size: 14px; font-family: Mukta; line-height:30px; margin-bottom:30px;"> 
+																<li> Order accuracy, quality, and efficiency </li>
+																<li> Safe and timely deliveries </li>
+																<li> Minimal obstacles within in-app experience </li>
+
+															</ol> 
+														</p>
+
+														<p style="margin-bottom: 10px; display: inline-block"> Customer Frustrations:
+															<ol style="font-size: 14px; font-family: Mukta; line-height:30px; margin-bottom:30px;"> 
+																<li> No option to split payments for group ordering</li> 
+																<li> No discounts/rewards to incentive and retain customers</li>
+																<li> Inaccurate estimated time of deliveries </li>
+																<li> Forced registration to begin ordering process </li>
+																<li> Checking if every member in the group has added or completed their order request </li>
+															</ol> 
+														</p>
+
+													</div>
+
+													<!-- img: customer journey -->
+													<div class="col-lg-7" style="border: 1px solid white;" >
+															<section id="portfolio-details" class="portfolio-details">
+																<div class="portfolio-details-slider">
+																	<img style="border-radius: 0%; padding-top:0px;" src="assets/img/proj_chipotle/3_cj.png" alt="" /> 
+																</div>
+															</section>
+													</div> <!-- END: assumptions map: image 1 -->
+												</div>
+
 											</div>
 											<!-- END OF ... -->
 										</div>
 									</div>
 
-									<!-- customer journey IMG -->
-									<section id="portfolio-details" class="portfolio-details" style=" border: white 1px solid; margin-top: 0px; margin-bottom: -50px; margin-right: auto; margin-left: auto; width: 100%; " >
-										<div class="col-lg-12">
-											<div class="portfolio-details-slider" style="border: white 1px solid" >
-												<img style="border: white 1px solid" src="assets/img/proj_chipotle/3_cj.png" alt="" />
-											</div>
-										</div>
-									</section>
 									<!-- END: customer journey -->
 
 
