--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -515,26 +515,20 @@
 												</p>
 
 												<!-- img: ideation process / objective 1 -->
-												<p> <b style="color: #636363;"> Ideation Processes: </b> </p>
+												<p style="margin-bottom:10px;"> <b style="color: #636363;"> Ideation Processes & Solutions: </b> </p>
 												<div class="col-lg-12" style="border: 1px solid white;" >
-														<section id="portfolio-details" class="portfolio-details">
-															<div class="portfolio-details-slider">
-																<img style="border-radius: 0%; padding-top:0px;" src="assets/img/proj_chipotle/5_obj1a.png" alt="" /> 
-															</div>
-														</section>
-												</div> <!-- END: img: ideation process / objective 1  -->
+													<section id="portfolio-details" class="portfolio-details">
+														<div class="portfolio-details-slider">
+															<img style="border-radius: 0%; padding-top:0px;" src="assets/img/proj_chipotle/5_obj1a.png" alt="" /> 
+														</div>
+													</section>
 
-												<!-- img: ideation solutions / objective 1 -->
-												<p style="margin-bottom:10px;"> <b style="color: #636363;"> Ideation Solutions: </b> </p>
-												<div class="col-lg-12" style="border: 1px solid white;" >
-														<section id="portfolio-details" class="portfolio-details">
-															<div class="portfolio-details-slider">
-																<img style="border-radius: 0%; padding-top:0px;" src="assets/img/proj_chipotle/5_obj1b.png" alt="" /> 
-															</div>
-														</section>
+													<section id="portfolio-details" class="portfolio-details">
+														<div class="portfolio-details-slider">
+															<img style="border-radius: 0%; padding-top:0px;" src="assets/img/proj_chipotle/5_obj1b.png" alt="" /> 
+														</div>
+													</section>
 												</div> <!-- END: img: ideation process / objective 1  -->
-
-												
 											</div>
 										</div>
 									</div>
@@ -563,24 +557,20 @@
 												</p>
 
 												<!-- img: ideation process / objective 2 -->
-												<p> <b style="color: #636363;"> Ideation Processes: </b> </p>
+												<p style="margin-bottom:15px;"> <b style="color: #636363;"> Ideation Processes & Solutions: </b> </p>
 												<div class="col-lg-12" style="border: 1px solid white;" >
 													<section id="portfolio-details" class="portfolio-details">
 														<div class="portfolio-details-slider">
-															<img style="border-radius: 0%; padding-top:20px;" src="assets/img/proj_chipotle/5_obj2a.png" alt="" /> 
+															<img style="border-radius: 0%; padding-top:0px;" src="assets/img/proj_chipotle/5_obj2a.png" alt="" /> 
 														</div>
 													</section>
-												</div> <!-- END: img: ideation process / objective 2  -->
 
-												<!-- img: ideation solutions / objective 2 -->
-												<p style="margin-bottom:10px;"> <b style="color: #636363;"> Ideation Solutions: </b> </p>
-												<div class="col-lg-12" style="border: 1px solid white;" >
 													<section id="portfolio-details" class="portfolio-details">
 														<div class="portfolio-details-slider">
 															<img style="border-radius: 0%; padding-top:0px;" src="assets/img/proj_chipotle/5_obj2b.png" alt="" /> 
 														</div>
 													</section>
-												</div> <!-- END: img: ideation process / objective 2  -->
+												</div> <!-- END: img: ideation process / objective 1  -->
 
 												
 
