--- a/proj_pomolo.html
+++ b/proj_pomolo.html
@@ -820,7 +820,7 @@
 
 
 
-                <h3 style="margin-top:10%;"> RESULTS </h3>
+                <h3 style="margin-top:10%;"> FINAL DESIGNS </h3>
                 <div style="border: 1.5px solid #177add; width:5%; margin-bottom:4%; margin-top:4%;"> </div>
 
                 <!-- <p style="margin-bottom:30px;"> We've finally reached the final product! Here's a <br> demonstration 
