--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -628,6 +628,33 @@
 										</div>
 									</div>
 
+
+									<!-- START: VIDEO 0 -->
+									<div class="container"> 
+										<div class="row" style="border:1px white solid; margin-left:50px; margin-right:0px;">
+											<div class="col-lg-6">
+												<div class="content-container" style="border:1px white solid; width:100%; float:left; margin-left:0px;margin-right:-200px;margin-bottom:10px;">
+												<video width="400" height="600" controls> 
+													<source src="assets/img/proj_chipotle/spinner.mov" type="video/mp4">
+												</video>
+												</div>
+											</div>
+
+											<div class="col-lg-6" style="border:white 1px solid; margin:auto;">
+												<div class="content-container" style="width:100%; margin-left:70px;">
+												<h5 style="margin-bottom:30px;"> Log in With Face and Touch-ID </h5>
+												<p style="margin-left:0px;">
+													Instead of typing each
+													individual field, 
+													users can quickly and securely verify their identity
+													with facial recognition or a touch of a fingerprint.
+												</p>
+												</div>
+											</div>
+										</div>
+									</div> <!-- END: VIDEO 0 -->
+
+
 									<!-- START: VIDEO 1 -->
 									<div class="container"> 
 										<div class="row" style="border: white 1px solid; margin-left:0px; margin-right:0px;">
@@ -647,7 +674,7 @@
 											<div class="col-lg-6" style="padding-top:0rem; border:1px solid white;">
 												<div class="content-container" style="border:white 1px solid; margin-left:0px;">
 												<video width="400" height="600" controls> 
-													<source src="assets/img/proj_chipotle/grouporder1.mov" type="video/mp4">
+													<source src="assets/img/proj_chipotle/grouporder3.mov" type="video/mp4">
 												</video>
 												</div>
 											</div>
