--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -688,7 +688,7 @@
 											<div class="col-lg-6">
 												<div class="content-container" style="border:1px white solid; width:100%; float:left; margin-left:0px;margin-right:-200px;margin-bottom:10px;">
 												<video width="400" height="600" controls> 
-													<source src="assets/img/proj_chipotle/grouporder3.mov" type="video/mp4">
+													<source src="assets/img/proj_chipotle/badge.mov" type="video/mp4">
 												</video>
 												</div>
 											</div>
@@ -707,7 +707,33 @@
 										</div>
 									</div> <!-- END: VIDEO 2 -->
 
+									
+									<!-- START: VIDEO 3 -->
+									<div class="container"> 
+										<div class="row" style="border: white 1px solid; margin-left:0px; margin-right:0px;">
+											<div class="col-lg-6" style="border:white 1px solid; margin:auto;">
+												<div class="content-container" style="border:white 1px solid; margin-left:0px;width:100%;">
+												<h5 style="margin-bottom:30px;"> Quick and Simple Signup </h5>
+												<p style="margin-left:0px; margin-bottom:10px;">
+													A simple 3-field registration that asks only the most
+													necessary of information. 
+													
+													By shortening the signup process, Pomolo will help users
+													save time and effort, and leave less room for error. 
+												</p>
+												</div>
+											</div>
 
+											<div class="col-lg-6" style="padding-top:0rem; border:1px solid white;">
+												<div class="content-container" style="border:white 1px solid; margin-left:0px;">
+												<video width="400" height="600" controls> 
+													<source src="assets/img/proj_chipotle/grouporder3.mov" type="video/mp4">
+												</video>
+												</div>
+											</div>
+										</div>
+										</div>
+									</div> <!-- END: VIDEO 3 -->
 
 
 
