updated vids, added summaries for first 2

--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -199,7 +199,7 @@
 											<a class="about-link2" href="https://www.figma.com/file/5eBy6eTb2NaL83uibPpy0i/Projects---UX-III-(Spinner)?type=design&node-id=302%3A2&t=qYM3lOf3roe00INw-1" target="_blank" > Figma Work </a>
 											<br />
 
-											<a class="about-link2" href="https://drive.google.com/file/d/12VJiyfaPLubxKGMzJOmmDMFZNw6WzGw1/view" target="_blank" > Process Deck </a>
+											<a class="about-link2" href="" target="_blank" > Process Deck </a>
 											<br />
 
 
@@ -634,7 +634,7 @@
 										<div class="row" style="border:1px white solid; margin-left:50px; margin-right:0px;">
 											<div class="col-lg-6">
 												<div class="content-container" style="border:1px white solid; width:100%; float:left; margin-left:0px;margin-right:-200px;margin-bottom:10px;">
-												<video width="400" height="600" controls> 
+												<video style="width:70%;" height="" muted autoplay loop>
 													<source src="assets/img/proj_chipotle/create.mov" type="video/mp4">
 												</video>
 												</div>
@@ -642,12 +642,9 @@
 
 											<div class="col-lg-6" style="border:white 1px solid; margin:auto;">
 												<div class="content-container" style="width:100%; margin-left:70px;">
-												<h5 style="margin-bottom:30px;"> Log in With Face and Touch-ID </h5>
+												<h5 style="margin-bottom:30px;"> Enhanced Onboard & Home Design </h5>
 												<p style="margin-left:0px;">
-													Instead of typing each
-													individual field, 
-													users can quickly and securely verify their identity
-													with facial recognition or a touch of a fingerprint.
+													 Highlighting the "group order" feature with informative details, early introduction, and simple instructions. We make the "group order" button easily accessible, providing customers a convenient way to place orders for groups, saving time and effort.
 												</p>
 												</div>
 											</div>
@@ -660,25 +657,20 @@
 										<div class="row" style="border: white 1px solid; margin-left:0px; margin-right:0px;">
 											<div class="col-lg-6" style="border:white 1px solid; margin:auto;">
 												<div class="content-container" style="border:white 1px solid; margin-left:0px;width:100%;">
-												<h5 style="margin-bottom:30px;"> Quick and Simple Signup </h5>
+												<h5 style="margin-bottom:30px;"> Spin to Win Daily Rewards </h5>
 												<p style="margin-left:0px; margin-bottom:10px;">
-													A simple 3-field registration that asks only the most
-													necessary of information. 
-													
-													By shortening the signup process, Pomolo will help users
-													save time and effort, and leave less room for error. 
+													Experience a new level of fun and interactive in-app journey while saving money and winning prizes with your orders! Say hello to more opportunities to save money and earn discounts. 
 												</p>
 												</div>
 											</div>
 
 											<div class="col-lg-6" style="padding-top:0rem; border:1px solid white;">
 												<div class="content-container" style="border:white 1px solid; margin-left:0px;">
-												<video width="400" height="600" controls> 
+												<video style="width:70%;" height="" muted autoplay loop>
 													<source src="assets/img/proj_chipotle/spinner.mov" type="video/mp4">
 												</video>
 												</div>
 											</div>
-										</div>
 										</div>
 									</div> <!-- END: VIDEO 1 -->
 
@@ -687,15 +679,16 @@
 										<div class="row" style="border:1px white solid; margin-left:50px; margin-right:0px;">
 											<div class="col-lg-6">
 												<div class="content-container" style="border:1px white solid; width:100%; float:left; margin-left:0px;margin-right:-200px;margin-bottom:10px;">
-												<video width="400" height="600" controls> 
-													<source src="assets/img/proj_chipotle/badge.mov" type="video/mp4">
-												</video>
+													<!-- <img style="width:70%; height:70%; " src="assets/img/proj_chipotle/badge.gif" alt="Your GIF" /> -->
+													 <video style="width:70%;" height="" muted autoplay loop>
+														<source src="assets/img/proj_chipotle/badge.mov" type="video/mp4"> 
+													 </video> 
 												</div>
 											</div>
 
 											<div class="col-lg-6" style="border:white 1px solid; margin:auto;">
 												<div class="content-container" style="width:100%; margin-left:70px;">
-												<h5 style="margin-bottom:30px;"> Log in With Face and Touch-ID </h5>
+												<h5 style="margin-bottom:30px;"> Unlock Badges to Rise to the Top </h5>
 												<p style="margin-left:0px;">
 													Instead of typing each
 													individual field, 
@@ -726,8 +719,8 @@
 
 											<div class="col-lg-6" style="padding-top:0rem; border:1px solid white;">
 												<div class="content-container" style="border:white 1px solid; margin-left:0px;">
-												<video width="400" height="600" controls> 
-													<source src="assets/img/proj_chipotle/grouporder3.mov" type="video/mp4">
+												<video style="width:70%;" height="" muted autoplay loop>
+													<source src="assets/img/proj_chipotle/grouporder.mov" type="video/mp4">
 												</video>
 												</div>
 											</div>
@@ -773,7 +766,7 @@
 											<div class="col-lg-12">
 												<h3> TAKEAWAYS </h3>
 												<div style=" border: 1.5px solid #C81E10; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div> 
-												<p style="margin-bottom:4%;"> For this project, my primary objective was to prioritize the needs and pain points of Gen Z and younger millennial users, aiming to enhance user engagement with The Washington Post. In parallel, I focused on improving the site's information architecture and content taxonomy to ensure a seamless and intuitive user experience. </p>
+												<p style="margin-bottom:4%;"> Throughout our learning journey, we acquired valuable product design insights and skills. We learned to break down complex information, balance user experience with business considerations, hone brainstorming abilities, optimize time with quick sketches and prototyping, and understand the value of low-fidelity prototypes. Effective usability testing helped us refine our designs, while seamlessly incorporating them into existing apps improved user interactions. Our collaboration skills also improved, enabling effective teamwork across platforms like Slack, Miro, and Figma. These takeaways empower us to create exceptional user-centric products that excel in design and functionality. </p>
 											</div>
 										</div>
 									</div> <!-- End: takeaways -->
@@ -789,9 +782,9 @@
 										<!-- top / bottom style -->
 										<!-- <div class="container" style="margin:10px; border: white 1px solid;"></div> -->
 
-										<a class="entry-buttons4" href="https://www.figma.com/file/ACZ0s3scQi8bZ1QPJ2NfIR/Portfolio---The-Washington-Post?type=design&node-id=4-6" target="_blank" >FIGMA WORK</a >
+										<a class="entry-buttons4" href="https://www.figma.com/file/5eBy6eTb2NaL83uibPpy0i/Portfolio---Chipotle?type=design&node-id=312%3A7088&mode=design&t=YkWhJHBIxJfrynIu-1" target="_blank" >FIGMA WORK</a >
 
-										<a class="entry-buttons4" href="https://drive.google.com/file/d/12VJiyfaPLubxKGMzJOmmDMFZNw6WzGw1/view?usp=share_link" target="_blank" > PROCESS DECK </a>
+										<a class="entry-buttons4" href="" target="_blank" > PROCESS DECK </a>
 									</div>
 								</div>
 							</article>
