all case studies, added chip

--- a/index.html
+++ b/index.html
@@ -159,6 +159,23 @@
         <br> <br>
         <div class="row portfolio-container">
 
+
+          <!-- Chipotle  -->
+          <div class="col-lg-4 portfolio-item" class="img-fluid">
+            <a href="proj_chipotle.html" target="_blank">
+              <div class="image" >
+                <img src="assets/img/proj_chipotle/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
+                <div class="image_overlay">
+                    <div class="image_title"> CHIPOTLE </div>
+                    <p class="image_description"> <em> Collaborative Mobile Redesign Project  </em>
+                    </p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+
+
           <!-- Content Design  -->
           <div class="col-lg-4 portfolio-item" class="img-fluid">
             <a href="proj_thewashingtonpost.html" target="_blank">
@@ -166,7 +183,7 @@
                 <img src="assets/img/proj_post/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> THE WASHINGTON POST </div>
-                    <p class="image_description"> <em> research, content strategy, ia, prototyping </em>
+                    <p class="image_description"> <em> Content Strategy: Innovating for the Next Generation </em>
                     </p>
                 </div>
               </div>
@@ -181,7 +198,7 @@
                 <img src="assets/img/proj_bala/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> BALA BANGLES </div>
-                    <p class="image_description"> <em> research, content strategy, ia, prototyping </em>
+                    <p class="image_description"> <em> Content Strategy: Streamlining the Digital Fitness Journey  </em>
                     </p>
                 </div>
               </div>
@@ -209,7 +226,7 @@
                 <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> POMOLO </div>
-                    <p class="image_description"> <em> mobile, concept, ux, visd </em>
+                    <p class="image_description"> <em> Transforming Onboarding Flows: A Seamless Integration </em>
                     </p>
                 </div>
               </div>
