--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -144,7 +144,7 @@
 								<h2 class="title1" style="color: #f2cc5c">Bala Bangles</h2>
 
 								<h2 class="subtitle1">
-									CONTENT STRATEGY & INFORMATION ARCHITECTURE
+									CONTENT STRATEGY: STREAMLINING THE DIGITAL FITNESS JOURNEY
 								</h2>
 
 								<h2 class="subtitle2">
