--- a/proj_pomolo.html
+++ b/proj_pomolo.html
@@ -111,11 +111,11 @@
               </h2>
 
               <h2 class="subtitle1">
-                MOBILE APP & CONCEPT DEVELOPMENT
+                TRANSFORMING ONBOARDING FLOWS: A SEAMLESS INTEGRATION
               </h2>
 
               <h2 class="subtitle2">
-                For my first solo design project, I designed a mobile tracking app called Pomolo which aims to help students with their focus and concentration. This project aims to understand and address the issues with current onboarding experiences and ways in which it can be improved to meet students' goals. This exercise was an eye-opening journey in which I gained insight in not only thoroughly researching and designing, but also iteratively testing and refining results to ensure that they meets users' needs. 
+                For my first solo design project, I designed a focus-tracking app called Pomolo which aims to help students with their focus and concentration. This project aims to understand and address the issues with current onboarding experiences and ways in which it can be improved to meet students' goals. 
 
 
               </h2>
@@ -853,11 +853,14 @@
                         </div>
                       </div>
 
-                      <div class="col-lg-6" style="padding-top:0rem; border:1px solid white;">
+                      <div class="col-lg-6" style="border:1px solid white;">
                         <div class="content-container" style="border:white 1px solid; margin-left:0px;">
-                          <video width="400" height="600" controls> 
-                            <source src="assets/img/portfolio/signup.mov" type="video/mp4">
-                          </video>
+                          <center> 
+                             <video style="width:70%;" height="" muted autoplay loop>
+                              <source src="assets/img/portfolio/signup.mov" type="video/mp4">
+                            </video>
+                          </center>
+                         
                         </div>
                       </div>
                     </div>
@@ -876,9 +879,12 @@
                     <div class="row" style="border:1px white solid; margin-left:50px; margin-right:0px;">
                       <div class="col-lg-6">
                         <div class="content-container" style="border:1px white solid; width:100%; float:left; margin-left:0px;margin-right:-200px;margin-bottom:10px;">
-                          <video width="400" height="600" controls> 
-                            <source src="assets/img/portfolio/touchfaceid.mov" type="video/mp4">
-                          </video>
+                          <center> 
+                            <video style="width:70%;" height="" muted autoplay loop>
+                              <source src="assets/img/portfolio/touchfaceid.mov" type="video/mp4">
+                            </video>
+                          </center>
+                          
                         </div>
                       </div>
 
@@ -922,9 +928,11 @@
 
                       <div class="col-lg-6" style="padding-top:0rem; border:1px solid white;">
                         <div class="content-container" style="margin-left:0px;">
-                          <video width="400" height="600" controls> 
-                            <source src="assets/img/portfolio/recovery.mov" type="video/mp4">
-                          </video>
+                          <center>
+                            <video style="width:70%;" height="" muted autoplay loop>
+                              <source src="assets/img/portfolio/recovery.mov" type="video/mp4">
+                            </video>
+                          </center>
                         </div>
                       </div>
                     </div>
@@ -946,9 +954,11 @@
                     <div class="row" style="border:1px white solid; margin-left:50px; margin-right:0px;">
                       <div class="col-lg-6">
                         <div class="content-container" style="border:1px white solid; width:100%; float:left; margin-left:0px;margin-right:-200px;margin-bottom:10px;">
-                          <video width="400" height="600" controls> 
-                            <source src="assets/img/portfolio/touchfaceid.mov" type="video/mp4">
-                          </video>
+                          <center>
+                            <video style="width:70%;" height="" muted autoplay loop>
+                              <source src="assets/img/portfolio/touchfaceid.mov" type="video/mp4">
+                            </video>
+                          </center>
                         </div>
                       </div>
 
