all case studies, added chip

--- a/aboutme.html
+++ b/aboutme.html
@@ -285,8 +285,8 @@
                       <div class="books-list">
                         <ol>
                           <li> Strength-training </li>
-                          <li> Reading </li>
-                          <li> Exploring new places and cultures</li>
+                          <li> Reading & listening to podcasts </li>
+                          <li> Enjoying nature and outdoor activities </li>
                         </ol>
                       </div>
                       <div class="image_overlay2">
@@ -344,7 +344,7 @@
                       </div> -->
                       <div class="books-list">
                         <ol>
-                          <li> Radiolab </li>   
+                          <li> The Daily </li>   
                           <li> Hidden Brain </li>  
                           <li> On Purpose with Jay Shetty </li>                      
                         </ol>
