--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
-          <li><a class="nav-link scrollto" href="#portfolio">PROJECTS</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">PORTFOLIO</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
           <li><a href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">RESUME</a></li>
           <!-- <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li> -->
@@ -127,7 +128,7 @@
     <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-right:50px;">
       <br> <br>
       <h1 class="logo"><a href="index.html" title="IRENE LUE">  IRENE LUE </a> </h1>
-      <h1> Hey, I'm Irene! </h1>
+      <h1> Hey! I'm Irene Lue </h1>
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
       <h3 style="border:white 1px solid;"> 
