--- a/aboutme.html
+++ b/aboutme.html
@@ -60,8 +60,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
-     
-          <li><a href="index.html#portfolio">PROJECTS</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="index.html#portfolio">PORTFOLIO</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
           <li><a href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">RESUME</a></li>
           <!-- <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li> -->
@@ -110,10 +110,10 @@
           <div class="col-lg-6 mx-auto" style="position:relative; border:solid white 1px; margin:auto;"> 
             <div class="container">
               <div class="about-title2">
-                HI THERE!
+                ABOUT ME
               </div>
               <!-- <hr style="border: 2px solid #888888; width:10%; margin-bottom:5%; margin-top:5%;"> -->
-              <div style="border: 2px solid #5abad5; width:10%; margin-bottom:7%; margin-top:3%;"> </div>
+              <div style="border: 2px solid #0000001e; width:10%; margin-bottom:7%; margin-top:3%;"> </div>
 
 
               <div class ="about-paragraph2">
@@ -165,9 +165,9 @@
               <div class="row" style="width:100%; border:white 1px solid;">
                   <!-- education box -->
                   <div class="case-details" style="border:white 1px solid">                   
-                    <h2 style="font-size:15px;"> EDUCATION </h2>
+                    <h3 style="font-size:15px;"> EDUCATION </h3>
                     <!-- yellow - #ffdf6a-->
-                    <div style="border: 1.5px solid #5abad5; width:10%; margin-bottom:4%; margin-top:4%;"> </div>
+                    <div style="border: 1.5px solid #0000001e; width:10%; margin-bottom:4%; margin-top:4%;"> </div>
                     <div> 
                       <p style="font-weight:550; margin: auto;"> University of California, San Diego </p>
                       <p>
@@ -191,8 +191,8 @@
 
                   <!-- design skills -->
                   <div class="case-details" style="width:21.66%; border:white 1px solid; ">                   
-                    <h2 style="font-size:15px;"> DESIGN </h2>
-                    <div style="border: 1.5px solid #5abad5; width:10%; margin-bottom:6%; margin-top:3%;"> </div>
+                    <h3 style="font-size:15px;"> DESIGN </h3>
+                    <div style="border: 1.5px solid #0000001e; width:10%; margin-bottom:6%; margin-top:3%;"> </div>
                     <div> 
                       <p>
                         Concept Development <br>
@@ -211,8 +211,8 @@
 
                   <!-- technical skills -->
                   <div class="case-details" style="width:21.66%; border:white 1px solid; ">                   
-                    <h2 style="font-size:15px;"> TECHNICAL </h2>
-                    <div style="border: 1.5px solid #5abad5; width:10%; margin-bottom:6%; margin-top:3%;"> </div>
+                    <h3 style="font-size:15px;"> TECHNICAL </h3>
+                    <div style="border: 1.5px solid #0000001e; width:10%; margin-bottom:6%; margin-top:3%;"> </div>
                     <div> 
                       <p>
                         Python <br>
@@ -230,9 +230,9 @@
 
                   <!-- tools -->
                   <div class="case-details" style="width:21.66%; border:white 1px solid; ">                   
-                    <h2 style="font-size:15px;"> TOOLS</h2>
+                    <h3 style="font-size:15px;"> TOOLS</h3>
                     <!-- 57cdd4 57ced4ae --> 
-                    <div style="border: 1.5px solid #5abad5; width:10%; margin-bottom:6%; margin-top:3%;"> </div>
+                    <div style="border: 1.5px solid #0000001e; width:10%; margin-bottom:6%; margin-top:3%;"> </div>
                     <div> 
                       <p>
                         Git <br>
