--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <img src="assets/img/proj_chipotle/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> CHIPOTLE </div>
-                    <p class="image_description"> <em> Collaborative Mobile Redesign Project  </em>
+                    <p class="image_description"> <em> Collaborative Mobile Redesign  </em>
                     </p>
                 </div>
               </div>
