updated index labels

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <img src="assets/img/proj_chipotle/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> CHIPOTLE </div>
-                    <p class="image_description"> <em> Collaborative Mobile Redesign  </em>
+                    <p class="image_description"> <em> Collaborative Mobile App Redesign  </em>
                     </p>
                 </div>
               </div>
@@ -184,7 +184,7 @@
                 <img src="assets/img/proj_post/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> THE WASHINGTON POST </div>
-                    <p class="image_description"> <em> Content Strategy: Innovating for the Next Generation </em>
+                    <p class="image_description"> <em> Content Strategy, Information Architecture, Web Design </em>
                     </p>
                 </div>
               </div>
@@ -199,7 +199,7 @@
                 <img src="assets/img/proj_bala/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> BALA BANGLES </div>
-                    <p class="image_description"> <em> Content Strategy: Streamlining the Digital Fitness Journey  </em>
+                    <p class="image_description"> <em> Content Strategy, Information Architecture, Web Design </em>
                     </p>
                 </div>
               </div>
@@ -227,7 +227,7 @@
                 <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> POMOLO </div>
-                    <p class="image_description"> <em> Transforming Onboarding Flows: A Seamless Integration </em>
+                    <p class="image_description"> <em> Concept Development, Mobile App Design </em>
                     </p>
                 </div>
               </div>
