--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -144,7 +144,7 @@
 								<h2 class="title1" style="color: #f2cc5c">Bala Bangles</h2>
 
 								<h2 class="subtitle1">
-									CONTENT STRATEGY: STREAMLINING THE DIGITAL FITNESS JOURNEY
+									CONTENT STRATEGY, INFORMATION ARCHITECTURE
 								</h2>
 
 								<h2 class="subtitle2">
@@ -218,7 +218,7 @@
 												margin-top: 4%;
 											"
 										></div>
-										<p>Content Strategy Web Prototypes</p>
+										<p>Desktop Content Redesign</p>
 									</div>
 
 									<!-- deck -->
