--- a/proj_pomolo.html
+++ b/proj_pomolo.html
@@ -111,7 +111,7 @@
               </h2>
 
               <h2 class="subtitle1">
-                TRANSFORMING ONBOARDING FLOWS: A SEAMLESS INTEGRATION
+                TRANSFORMATION OF ONBOARDING FLOWS
               </h2>
 
               <h2 class="subtitle2">
