--- a/proj_thewashingtonpost.html
+++ b/proj_thewashingtonpost.html
@@ -143,7 +143,7 @@
 							<article class="entry entry-single">
 								<h2 class="title1" style="color: #346BF3">The Washington Post</h2>
 
-								<h2 class="subtitle1"> CONTENT STRATEGY: INNOVATING FOR THE NEXT GENERATION </h2>
+								<h2 class="subtitle1" > ENGAGING THE NEXT GENERATION (CONTENT STRATEGY)</h2>
 
 								<h2 class="subtitle2">
 									As the media landscape continues to evolve, it's critical for traditional news organizations like The Washington Post to stay relevant with younger audiences. This content strategy project aims to address this challenge by rethinking how the Post creates and delivers content to Gen Z and young millennials.
@@ -188,7 +188,7 @@
 									<div class="case-details" style="width: 25%">
 										<h2>DELIVERABLE</h2>
 										<div style=" border: 1.5px solid #346BF3; width: 10%; margin-bottom: 4%; margin-top: 4%; " ></div>
-										<p>Web Content Redesign</p>
+										<p>Desktop Content Redesign</p>
 									</div>
 
 									<!-- deck -->
