--- a/aboutme.html
+++ b/aboutme.html
@@ -117,15 +117,17 @@
 
 
               <div class ="about-paragraph2">
-                I’m Irene, a detail-oriented UX designer with a fascination for solving complex problems and structuring digital content.    
-                
-                I believe that my role is to bridge the gap between users and digital systems by building efficient and user-centered experiences that help people accomplish their goals quickly and easily. 
+                I’m Irene, a UX designer with a fascination for information architecture, streamlining task flows, and designing efficient solutions that can help individuals live more fulfilling lives.
+
+                My life experience has equipped me to become a tenacious problem-solver, resilient learner, and empathetic leader.
+
+                I'm dedicated to bridging the gap between users and digital experiences, and building well-structured systems that help people in finding and understanding the information they need. 
 
                 </div>
 
                 <div class ="about-paragraph2">
             
-                Outside of design, I love staying active through strength training and exploring new places. I enjoy seeing things from a fresh perspective and sharing experiences with people who have the same curiosity for life.  <!-- I’m currently building on my skills in information architecture through personal projects and eager to learn from experienced information architects.  -->
+                Outside of design, I love staying active through strength training, running, and exploring nature. I enjoy music and the arts, and connecting with people who have the same curiosity for life.  <!-- I’m currently building on my skills in information architecture through personal projects and eager to learn from experienced information architects.  -->
                 </div>
               <div class ="about-paragraph2">
                 I’m always looking for opportunities to collaborate with other designers and gain feedback on my work. If you’d like to get in touch, I’d love to hear from you!
