--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
       <h3 style="border:white 1px solid;"> 
-      I'm a UX designer passionate about solving complex problems and designing simple solutions with the intent to learn and improve lives
+      I'm a UX designer passionate about information architecture, streamlining task flows, and designing efficient solutions that help individuals live more fulfilling lives
       </h3>
 
       <div class="container" style="margin-left:0px; margin-top:20px;">
