--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -290,10 +290,10 @@
 												<div class="col-lg-6">
 													<p style="margin-bottom: 10px; display: inline-block"> To prioritize our assumptions, we assessed each one based on its level of certainty and significance. We asked ourselves the following guiding questions to determine which assumptions warranted the most attention:
 														<ol style="font-size: 14px; font-family: Mukta; line-height:30px; margin-bottom:0px;"> 
-															<li> <b style="color: #636363;"> Certainty: </b> Is this assumption a commonly encountered issue?</li>
-															<li> <b style="color: #636363;"> Uncertainty: </b> Does this assumption represent a novel or uncommon problem? </li>
-															<li> <b style="color: #636363;"> Important: </b> Is this issue critical to resolve and valuable to customers? </li>
-															<li> <b style="color: #636363;"> Unimportant: </b> Is this issue commonplace and expected by customers? </li>
+															<li> <i style="color: #636363;"> Certainty: </i> Is this assumption a commonly encountered issue?</li>
+															<li> <i style="color: #636363;"> Uncertainty: </i> Does this assumption represent a novel or uncommon problem? </li>
+															<li> <i style="color: #636363;"> Important: </i> Is this issue critical to resolve and valuable to customers? </li>
+															<li> <i style="color: #636363;"> Unimportant: </i> Is this issue commonplace and expected by customers? </li>
 														</ol>
 													</p>
 												</div>
@@ -381,7 +381,7 @@
 												<div class="row">
 													<!-- customer values and frustrations -->
 													<div class="col-lg-5">
-														<p style="margin-bottom: 10px; display: inline-block"> Customer Values:
+														<p style="margin-bottom: 10px; display: inline-block"> <b style="color: #636363;"> Customer Values: </b>
 															<ol style="font-size: 14px; font-family: Mukta; line-height:30px; margin-bottom:30px;"> 
 																<li> Order accuracy, quality, and efficiency </li>
 																<li> Safe and timely deliveries </li>
@@ -390,7 +390,7 @@
 															</ol> 
 														</p>
 
-														<p style="margin-bottom: 10px; display: inline-block"> Customer Frustrations:
+														<p style="margin-bottom: 10px; display: inline-block"> <b style="color: #636363;"> Customer Frustrations: </b>
 															<ol style="font-size: 14px; font-family: Mukta; line-height:30px; margin-bottom:30px;"> 
 																<li> No option to split payments for group ordering</li> 
 																<li> No discounts/rewards to incentive and retain customers</li>
@@ -508,9 +508,9 @@
 
 												<p style="margin-bottom:5px;"> <b style="color: #636363;"> Proposed Solutions: </b> 
 													<ol style="font-size: 14px; font-family: Mukta; line-height:30px; margin-bottom:30px;"> 
-														<li> <b style="color: #636363;"> Onboarding Process: </b> Introduce a dedicated screen during onboarding that provides a brief explanation of how the feature works and highlights its key benefits, thereby adding value for the customer.</li>
-														<li> <b style="color: #636363;"> Home Screen Redesign: </b> Revamp the home screen to make the "group feature" call-to-action (CTA) more prominent and easily noticeable. This ensures that users must actively choose their preferred ordering method, including the group order option.</li>
-														<li> <b style="color: #636363;"> Cart Pop-up Reminder: </b> Implement a pop-up message in the cart section that reminds users of the group order feature. This notification appears when multiple items are added to the cart, giving users the option to utilize the feature for a more streamlined ordering experience. </li>
+														<li> <i style="color: #636363;"> Onboarding Flow: </i> Introduce a dedicated screen during onboarding that provides a brief explanation of how the feature works and highlights its key benefits, thereby adding value for the customer.</li>
+														<li> <i style="color: #636363;"> Home Screen Redesign: </i> Revamp the home screen to make the "group feature" call-to-action (CTA) more prominent and easily noticeable. This ensures that users must actively choose their preferred ordering method, including the group order option.</li>
+														<li> <i style="color: #636363;"> Cart Pop-up Reminder: </i> Implement a pop-up message in the cart section that reminds users of the group order feature. This notification appears when multiple items are added to the cart, giving users the option to utilize the feature for a more streamlined ordering experience. </li>
 													</ol>
 												</p>
 
@@ -551,9 +551,9 @@
 
 												<p style="margin-bottom:5px;"> <b style="color: #636363;"> Proposed Solutions: </b>
 													<ol style="font-size: 14px; font-family: Mukta; line-height:30px; margin-bottom:30px;"> 
-														<li> <b style="color: #636363;"> Timeliness Compensation: </b> When an order is not prepared on time, we will compensate users by offering a free drink or food item. This gesture acknowledges any inconvenience caused and helps maintain customer satisfaction. </li>
-														<li> <b style="color: #636363;"> In-App Games: </b> To enhance customer engagement, we will incorporate interactive games within the app. Customers can participate in these games and have the opportunity to win free gifts or special deals, fostering a sense of excitement and enjoyment. </li>
-														<li> <b style="color: #636363;"> Badge Collection System: </b> We will introduce a badge collection feature where customers can earn badges by completing certain actions or milestones. Accumulating badges will allow customers to unlock rewards such as free food items, creating an incentive for continued engagement with the app and the brand. </li>
+														<li> <i style="color: #636363;"> Timeliness Compensation: </i> When an order is not prepared on time, we will compensate users by offering a free drink or food item. This gesture acknowledges any inconvenience caused and helps maintain customer satisfaction. </li>
+														<li> <i style="color: #636363;"> In-App Games: </i> To enhance customer engagement, we will incorporate interactive games within the app. Customers can participate in these games and have the opportunity to win free gifts or special deals, fostering a sense of excitement and enjoyment. </li>
+														<li> <i style="color: #636363;"> Badge Collection System: </i> We will introduce a badge collection feature where customers can earn badges by completing certain actions or milestones. Accumulating badges will allow customers to unlock rewards such as free food items, creating an incentive for continued engagement with the app and the brand. </li>
 													</ol>
 												</p>
 
