--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -102,6 +102,7 @@
 				<nav id="navbar" class="navbar">
 					<ul>
 						<!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
+						<li><a href="index.html">HOME</a></li>
 						<li><a href="index.html#portfolio">PROJECTS</a></li>
 						<li><a href="aboutme.html">ABOUT</a></li>
 						<li>
@@ -144,7 +145,7 @@
 								<h2 class="title1" style="color: #f2cc5c">Bala Bangles</h2>
 
 								<h2 class="subtitle1">
-									CONTENT STRATEGY, INFORMATION ARCHITECTURE
+									CONTENT STRATEGY, INFORMATION ARCHITECTURE, WEB DESIGN
 								</h2>
 
 								<h2 class="subtitle2">
