--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -102,6 +102,7 @@
 				<nav id="navbar" class="navbar">
 					<ul>
 						<!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
+						<li><a href="index.html">HOME</a></li>
 						<li><a href="index.html#portfolio">PROJECTS</a></li>
 						<li><a href="aboutme.html">ABOUT</a></li>
 						<li>
