--- a/proj_pomolo.html
+++ b/proj_pomolo.html
@@ -68,6 +68,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
+          <li><a href="index.html">HOME</a></li>
           <li><a href="index.html#portfolio">PROJECTS</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
           <li><a href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">RESUME</a></li>
@@ -111,7 +112,7 @@
               </h2>
 
               <h2 class="subtitle1">
-                TRANSFORMATION OF ONBOARDING FLOWS
+                CONCEPT DEVELOPMENT, MOBILE APP DESIGN
               </h2>
 
               <h2 class="subtitle2">
