--- a/proj_thewashingtonpost.html
+++ b/proj_thewashingtonpost.html
@@ -102,6 +102,7 @@
 				<nav id="navbar" class="navbar">
 					<ul>
 						<!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
+						<li><a href="index.html">HOME</a></li>
 						<li><a href="index.html#portfolio">PROJECTS</a></li>
 						<li><a href="aboutme.html">ABOUT</a></li>
 						<li>
@@ -143,7 +144,7 @@
 							<article class="entry entry-single">
 								<h2 class="title1" style="color: #346BF3">The Washington Post</h2>
 
-								<h2 class="subtitle1" > ENGAGING THE NEXT GENERATION (CONTENT STRATEGY)</h2>
+								<h2 class="subtitle1" > CONTENT STRATEGY, INFORMATION ARCHITECTURE, WEB DESIGN </h2>
 
 								<h2 class="subtitle2">
 									As the media landscape continues to evolve, it's critical for traditional news organizations like The Washington Post to stay relevant with younger audiences. This content strategy project aims to address this challenge by rethinking how the Post creates and delivers content to Gen Z and young millennials.
